<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculateYour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/my_calendar"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@color/teal_200"
        android:fontFamily="monospace"
        android:text="@string/program"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/on_phone"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:text="@string/select_date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/edtSelectDateResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:text="@string/selecteddateresult"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:hint="@string/select_date"
        android:autofillHints="@string/select_date" />

    <TextView
        android:id="@+id/txtSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/selected_date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edtSelectDateMIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/age_selected_in_minutes"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:autofillHints="@string/today_s_date"
        android:hint="@string/today_s_date"/>

    <TextView
        android:id="@+id/txtTodayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/today_s_date"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>